--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,8 +14,8 @@
         tools:targetApi="31">
         <!--        android:theme="@style/Theme.Group_10_Melody_Match"-->
 
-        <activity
-            android:name=".MainActivity"/>
+<!--        <activity-->
+<!--            android:name=".MainActivity"/>-->
 
         <activity
             android:name=".ui.activity.MainActivity"
