Add song list feature, works for v1, still optimizing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
             android:name=".ui.activity.AddArtistActivity"
             android:exported="false"
             android:label="@string/add_artist" />
+
+        <activity android:name=".ui.activity.SongListActivity" />
+
+
+
     </application>
 
 </manifest>
